--- a/index.html
+++ b/index.html
@@ -1,21 +1,33 @@
 <html>
 
 <head>
-	<title>Hello World</title>
+	<center><title>TRUTH PARTY</title></center>
 </head>
 
-<body style="background-color:chocolate;">
+<body style="background-color:palegoldenrod;">
 	
-	<h1 style="color:lavender;">This is my webpage!</h1>
+	<center><font size="+5"><i><h1 style="color:maroon;">The Truth Party</h1></i></font></center>
 
-	<p style="color:lavender;"><i>They shall be hurled to the <a href="page2.html"><b>ALL CONSUMING ONE</b></i></a></p>
-	<a href="https://www.w3schools.com/html/tryit.asp?filename=tryhtml_styles_background-color">
-	<p><img width="800" src="lavender.jpg"/></p></a>
+<center><div class="topnav">
+  <a class="active" href="index.html"><button>Home</button></a>
+  <a href="about.html"><button>About</button></a>
+  <a href="#contact"><button>Our Program</button></a>
+  <a href="#about"><button>Contact</button></a>
+  <a href="on911.html"><button>On 9-11</button></a>
+</div></center>
+
+	<center><p style="color:maroon;"><font size="+3">THE TRUTH PARTY is a social, political, religious, and educational, organization concerned <i>with</i> the lack of TRUE THINKING in this nation's government. </font></p></center>
+	
+	<center><p><img width="800" src="lavender.jpg"/></p></center>
+	
+	<center><p style="color:maroon;"><font size="+2">If you, as a CITIZEN of the UNITED states are seeking more TRUTH POWER and VISION please explore our <i>political</i> PARTy</font></p></center>
+
+	<center><p style="color:maroon;"><font size="+2">Our PARTY is a <i>syntheis</i> of all of the BEST aspects of "The Republican Party" (GOP) and WICCA (<i>religious</i>), with reference to "The Light Party (tm)" and <b><i>heavens gate</i></b></font></p></center>
+
+	<center><p style="color:maroon;"><font size="+2">We are seeking to PURGE the LIES (Like <a href="on911.html">"9-11"</a>) form this BEAUTIFUL country through our <a href="ourprogram.html">our program</a> of holistic, unilateralist wellness .</font></p></center>
 
 	<br />
 	<br />
-
-	<a href="https://www.artofmanliness.com/articles/mans-guide-scarf/?mc_cid=e423774145&mc_eid=353acabc27">ALL CONSUMING ONE</a>
 
 </body>
 
