--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <center><div class="topnav">
   <a class="active" href="index.html"><button>Home</button></a>
-  <a href="about.html"><button>About</button></a>
+  <a href="About.html"><button>About</button></a>
   <a href="#contact"><button>Our Program</button></a>
   <a href="#about"><button>Contact</button></a>
   <a href="on911.html"><button>On 9-11</button></a>
@@ -18,7 +18,7 @@
 
 	<center><p style="color:maroon;"><font size="+3">THE TRUTH PARTY is a social, political, religious, and educational, organization concerned <i>with</i> the lack of TRUE THINKING in this nation's government. </font></p></center>
 	
-	<center><p><img width="800" src="lavender.jpg"/></p></center>
+	<center><p><img width="800" src="Lavender.jpg"/></p></center>
 	
 	<center><p style="color:maroon;"><font size="+2">If you, as a CITIZEN of the UNITED states are seeking more TRUTH POWER and VISION please explore our <i>political</i> PARTy</font></p></center>
 
