--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <center><div class="topnav">
   <a class="active" href="index.html"><button>Home</button></a>
-  <a href="About.html"><button>About</button></a>
+  <a href="about.html"><button>About</button></a>
   <a href="#contact"><button>Our Program</button></a>
-  <a href="#about"><button>Contact</button></a>
+  <a href="contact.html"><button>Contact</button></a>
   <a href="on911.html"><button>On 9-11</button></a>
 </div></center>
 
